cmake_minimum_required(VERSION 3.20)
project(PTA)

set(CMAKE_CXX_STANDARD 14)

add_executable(PTA main.cpp)

add_executable(ACM ACM.cpp)
add_executable(Maximum-subsection-sum Maximum-subsection-sum.cpp)
add_executable(BestBinaryTree BestBinaryTree.cpp)
add_executable(MutilTask MutilTask.c)
add_executable(Fill Fill.c)