cmake_minimum_required(VERSION 3.20)
project(PTA)

set(CMAKE_CXX_STANDARD 14)

add_executable(ACM 02.cpp)
add_executable(Maximum-subsection-sum "Class Example/Maximum-subsection-sum.cpp")
add_executable(BestBinaryTree "Class Example/BestBinaryTree.cpp")
add_executable(MutilTask "Class Example/MutilTask.c")
add_executable(Fill 03.c)
add_executable(Moonpie 05.cpp)
add_executable(test test.cpp)
